criando crud e swagger de genero
