# src/config/swagger.yaml
@@ -97,6 +97,26 @@ components:
           type: string
           format: date-time
           description: Data da última atualização da avaliação
+    Genero:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: ID do gênero
+        descricao:
+          type: string
+          description: Descrição do gênero
+        status:
+          type: integer
+          description: Status do gênero (1 para ativo, 0 para inativo)
+        createdAt:
+          type: string
+          format: date-time
+          description: Data de criação do registro
+        updatedAt:
+          type: string
+          format: date-time
+          description: Data da última atualização do registro
     ErrorResponse:
       type: object
       properties:
@@ -614,3 +634,125 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /generos:
+    get:
+      tags:
+        - Genero
+      summary: Busca todos os gêneros
+      description: Retorna uma lista de todos os gêneros cadastrados
+      responses:
+        200:
+          description: Lista de gêneros retornada com sucesso
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Genero'
+        500:
+          description: Erro interno do servidor
+  /genero/{id}:
+    get:
+      tags:
+        - Genero
+      summary: Busca um gênero pelo ID
+      description: Retorna os dados de um gênero específico com base no ID fornecido
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do gênero a ser buscado
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Dados do gênero retornados com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Genero'
+        404:
+          description: Gênero não encontrado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: Erro interno do servidor
+
+    put:
+      tags:
+        - Genero
+      summary: Atualiza os dados de um gênero
+      description: Atualiza os dados de um gênero específico com base no ID fornecido
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do gênero a ser atualizado
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Genero'
+      responses:
+        200:
+          description: Gênero atualizado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Genero'
+        400:
+          description: Erro na requisição
+        404:
+          description: Gênero não encontrado
+        500:
+          description: Erro interno do servidor
+  /genero:
+    post:
+      tags:
+        - Genero
+      summary: Cria um novo gênero
+      description: Adiciona um novo gênero ao sistema com base nas informações fornecidas
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Genero'
+      responses:
+        201:
+          description: Gênero criado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Genero'
+        400:
+          description: Erro na requisição
+        500:
+          description: Erro interno do servidor
+  /genero/{id}/delete:
+    put:
+      tags:
+        - Genero
+      summary: Realiza o delete lógico de um gênero
+      description: Atualiza o status do gênero para 0 (inativo), indicando um delete lógico.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do gênero a ser deletado logicamente
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Gênero deletado logicamente com sucesso
+        404:
+          description: Gênero não encontrado
+        500:
+          description: Erro interno do servidor
+
